Closed Bug 387720 Opened 17 years ago Closed 17 years ago

Shift-tab doesn't always work with textboxes (focusing textboxes?)

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

x86
All
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.9alpha8

People

(Reporter: asqueella, Assigned: enndeakin)

References

Details

(Keywords: regression, testcase)

Attachments

(2 files)

Open:

<?xml version="1.0"?>
<?xml-stylesheet href="chrome://global/skin/"?>

<window xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">

        <textbox id="a1"/>
        <textbox id="a2"/>
</window>

as top-level window. Focus the "a2" textbox and try to tab backwards via Shift+Tab (at least that's how you do it on Windows). Actual results: nothing happens. Expected: "a1" is focused.

Note that advancing focus forward works fine. Also note that this seems to be <textbox>-specific. If a1 is a checkbox, you can Shift-tab from a2->a1, but not from a1->a2. Similarly if a2 is a checkbox and a1 is a textbox, you can't Shift-tab to the textbox.

Regression range: 2007-07-04-04 - 2007-07-04-05

http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2007-07-04+02%3A00%3A00&maxdate=2007-07-05+06%3A00%3A00&cvsroot=%2Fcvsroot

I see smaug touched editor in that window, so CCing.
Could you upload the testcase as an attachment.
Attached file testcase
Sure, but the bug isn't that obvious when the testcase is opened in content.
I backed out bug 386820 and  bug 386561 locally but that didn't
fix the problem.
Hmm. My next guess is Neil then :)
Only partially a regression. This bug has actually always been there, but changes to the popup frame code make it now possible to notice it.

When getting the last child, skip backwards over popup frames instead of forwards.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attachment #271957 - Flags: superreview?(roc)
Attachment #271957 - Flags: review?(roc)
Attachment #271957 - Flags: superreview?(roc)
Attachment #271957 - Flags: superreview+
Attachment #271957 - Flags: review?(roc)
Attachment #271957 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Neil, could you please add the CVS output as comment after a check-in? Thanks.

2007-07-12 06:54 mozilla/layout/base/nsFrameTraversal.cpp 3.59
Target Milestone: --- → mozilla1.9beta1
That also happened for Linux. It is fixed now with todays trunk nightly.
Status: RESOLVED → VERIFIED
OS: Windows XP → All
Flags: in-testsuite?
Component: Keyboard: Navigation → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: