Bug 387720, fix shift+tab not working, popup reworking uncovered this bug which manifested itself as a regression, r+sr=roc